--- a/src/css/ninth_box.css
+++ b/src/css/ninth_box.css
@@ -1,5 +1,4 @@
 .ninth-panel .card-body {
-  min-height: 450px;
   color: white; }
   .ninth-panel .card-body .video {
     font-size: 10px; }
@@ -12,7 +11,7 @@
     color: white; }
 
 .ninth-panel .news-1 {
-  background: url("../../images/news-1.png") no-repeat; }
+  background: url("../images/news-1.png") no-repeat; }
 
 .ninth-panel .news-2 {
-  background: url("../../images/news-2.png") no-repeat; }
+  background: url("../images/news-2.png") no-repeat; }
