--- a/src/css/second_box.css
+++ b/src/css/second_box.css
@@ -1,21 +1,16 @@
-.second-panel .font-weight-bold {
+.second-panel .text-color-purple {
   position: relative; }
-  .second-panel .font-weight-bold .text-border-purple {
+  .second-panel .text-color-purple .text-border-purple {
     position: absolute;
     top: 6px;
     right: -6px;
     z-index: -100; }
-
-.second-panel .text-color-light-gray,
-.second-panel .card-text {
-  font-size: 10px; }
 
 .second-panel .card-title {
   color: #523AB4;
   font-weight: bold; }
 
 .second-panel .card-toggle .card-body {
-  min-height: 140px;
   box-shadow: #523AB4 -1px 7px 34px -10px; }
   .second-panel .card-toggle .card-body.collapsed {
     box-shadow: none; }
