--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,5 +11,7 @@ $color-gradient-header-srart-left: #975FE0;
 $color-gradient-header-srart-right: #975EE0;
 $color-gradient-header-finish-left: #4C4080;
 $color-gradient-header-finish-right: #4C3F81;
-
+$mobile: 500px;
+$tablet: 800px;
+$desktop: 1200px;
 
