--- a/src/css/eighth_box.css
+++ b/src/css/eighth_box.css
@@ -1,37 +1,28 @@
-.eighth-panel .text-color-purple {
-  position: relative; }
-  .eighth-panel .text-color-purple .text-border-purple {
-    position: absolute;
-    top: 11px;
-    right: -11px;
-    z-index: -100; }
-
-.eighth-panel .row-card-bonus .card-body .gift {
-  width: 30px;
-  height: 20px;
-  display: inline-table; }
-  .eighth-panel .row-card-bonus .card-body .gift.emerald-crown {
-    background: url("../../images/crown-1.png") no-repeat;
-    background-size: 100%; }
-  .eighth-panel .row-card-bonus .card-body .gift.diamond-crown {
-    background: url("../../images/crown-2.png") no-repeat;
-    background-size: 100%; }
-  .eighth-panel .row-card-bonus .card-body .gift.red-diamond-crown {
-    background: url("../../images/crown-3.png") no-repeat;
-    background-size: 100%; }
-  .eighth-panel .row-card-bonus .card-body .gift.blue-diamond-crown {
-    background: url("../../images/crown-4.png") no-repeat;
-    background-size: 100%; }
-  .eighth-panel .row-card-bonus .card-body .gift.white-diamond-crown {
-    background: url("../../images/crown-5.png") no-repeat;
-    background-size: 78%; }
-  .eighth-panel .row-card-bonus .card-body .gift.black-diamond-crown {
-    background: url("../../images/crown-6.png") no-repeat;
-    background-size: 80%; }
-
-.eighth-panel .row-card-bonus .card-body .img-gift {
-  width: 150px;
-  height: 150px; }
-
-.eighth-panel .row-card-bonus .card-body > div:first-child {
-  font-size: 12px; }
+.eighth-panel .row-card-bonus .card {
+  margin-bottom: 15px; }
+  .eighth-panel .row-card-bonus .card .card-body .gift {
+    width: 30px;
+    height: 20px;
+    display: inline-table; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.emerald-crown {
+      background: url("../images/crown-1.png") no-repeat;
+      background-size: 100%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.diamond-crown {
+      background: url("../images/crown-2.png") no-repeat;
+      background-size: 100%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.red-diamond-crown {
+      background: url("../images/crown-3.png") no-repeat;
+      background-size: 100%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.blue-diamond-crown {
+      background: url("../images/crown-4.png") no-repeat;
+      background-size: 100%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.white-diamond-crown {
+      background: url("../images/crown-5.png") no-repeat;
+      background-size: 78%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.black-diamond-crown {
+      background: url("../images/crown-6.png") no-repeat;
+      background-size: 80%; }
+  .eighth-panel .row-card-bonus .card .card-body .img-gift {
+    width: 120%; }
+  .eighth-panel .row-card-bonus .card .card-body > div:first-child {
+    font-size: 12px; }
