--- a/src/css/icons.css
+++ b/src/css/icons.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'icon';
-  src: url("../../fonts/icons/icon.eot?9re3qw");
-  src: url("../../fonts/icons/icon.eot?9re3qw#iefix") format("embedded-opentype"), url("../../fonts/icons/icon.ttf?9re3qw") format("truetype"), url("../../fonts/icons/icon.woff?9re3qw") format("woff"), url("../../fonts/icons/icon.svg?9re3qw#icon") format("svg");
+  src: url("../fonts/icons/icon.eot?9re3qw");
+  src: url("../fonts/icons/icon.eot?9re3qw#iefix") format("embedded-opentype"), url("../fonts/icons/icon.ttf?9re3qw") format("truetype"), url("../fonts/icons/icon.woff?9re3qw") format("woff"), url("../fonts/icons/icon.svg?9re3qw#icon") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -72,9 +72,9 @@
 .icon-plus:before {
   content: "\ea0a"; }
 
-.list-style-plus li {
+.list-style-plus > li {
   list-style-type: none; }
-  .list-style-plus li:before {
+  .list-style-plus > li:before {
     content: "\ea0a";
     font-family: 'icon' !important;
     color: #F2006C;
