--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,400,500,700,900&subset=cyrillic,cyrillic-ext");
 @font-face {
   font-family: 'icon';
-  src: url("../../fonts/icons/icon.eot?9re3qw");
-  src: url("../../fonts/icons/icon.eot?9re3qw#iefix") format("embedded-opentype"), url("../../fonts/icons/icon.ttf?9re3qw") format("truetype"), url("../../fonts/icons/icon.woff?9re3qw") format("woff"), url("../../fonts/icons/icon.svg?9re3qw#icon") format("svg");
+  src: url("../fonts/icons/icon.eot?9re3qw");
+  src: url("../fonts/icons/icon.eot?9re3qw#iefix") format("embedded-opentype"), url("../fonts/icons/icon.ttf?9re3qw") format("truetype"), url("../fonts/icons/icon.woff?9re3qw") format("woff"), url("../fonts/icons/icon.svg?9re3qw#icon") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -74,33 +74,28 @@
 .icon-plus:before {
   content: "\ea0a"; }
 
-.list-style-plus li {
+.list-style-plus > li {
   list-style-type: none; }
-  .list-style-plus li:before {
+  .list-style-plus > li:before {
     content: "\ea0a";
     font-family: 'icon' !important;
     color: #F2006C;
     display: inline-block;
     text-indent: -30px; }
 
-.second-panel .font-weight-bold {
+.second-panel .text-color-purple {
   position: relative; }
-  .second-panel .font-weight-bold .text-border-purple {
+  .second-panel .text-color-purple .text-border-purple {
     position: absolute;
     top: 6px;
     right: -6px;
     z-index: -100; }
-
-.second-panel .text-color-light-gray,
-.second-panel .card-text {
-  font-size: 10px; }
 
 .second-panel .card-title {
   color: #523AB4;
   font-weight: bold; }
 
 .second-panel .card-toggle .card-body {
-  min-height: 140px;
   box-shadow: #523AB4 -1px 7px 34px -10px; }
   .second-panel .card-toggle .card-body.collapsed {
     box-shadow: none; }
@@ -116,12 +111,6 @@
   position: relative; }
   .third-panel .left-side-box .text-style-bold {
     position: absolute; }
-    .third-panel .left-side-box .text-style-bold .text-color-purple {
-      font-size: 2em; }
-  .third-panel .left-side-box .box-3-image {
-    width: 100%;
-    position: absolute;
-    left: -20%; }
 
 .fourth-panel .carousel-control-next,
 .fourth-panel .carousel-control-prev {
@@ -160,103 +149,69 @@
 
 .fifth-panel .left-side-box {
   position: relative; }
-  .fifth-panel .left-side-box .box-5-image {
-    position: absolute;
-    width: 125%;
-    left: -30%; }
 
 .fifth-panel .right-side-box {
   position: relative; }
-  .fifth-panel .right-side-box .box-5-image {
-    position: absolute;
-    width: 125%;
-    right: -28%; }
 
 .fifth-panel .step-ico {
   display: inline-block;
-  font-size: 10px;
   position: relative; }
   .fifth-panel .step-ico.active .line-ico {
     border-top-color: #F2006C; }
 
-.fifth-panel .line-ico {
-  position: absolute;
-  width: 60px;
-  right: 10px;
-  top: 0; }
-
-.fifth-panel .presentation-box {
-  height: 300px; }
-
 .fifth-panel .colored-rounds {
-  width: 10px;
-  height: 10px;
   border-radius: 10px;
-  background: #F2006C;
-  display: inline-block; }
+  background: #F2006C; }
 
 .fifth-panel .row-list-item-problem .flex-row {
   position: relative; }
-  .fifth-panel .row-list-item-problem .flex-row .colored-rounds {
-    position: absolute;
-    top: 8px;
-    left: 0px; }
 
-.sixth-panel .right-side-box {
-  position: relative; }
-  .sixth-panel .right-side-box .image-box {
-    position: absolute;
-    left: -51%;
-    width: 150%; }
+.sixth-panel .list-style-plus li div h5 {
+  letter-spacing: 1px; }
 
 .sixth-panel .list-style-plus li:before {
-  text-indent: -20px; }
+  text-indent: -30px; }
 
-.btn-registration {
-  margin-top: -23px; }
-  .btn-registration .icon-sign-in {
-    opacity: 0.6; }
+.seventh-panel .btn-registration .icon-sign-in {
+  opacity: 0.6; }
 
-.eighth-panel .text-color-purple {
-  position: relative; }
-  .eighth-panel .text-color-purple .text-border-purple {
-    position: absolute;
-    top: 11px;
-    right: -11px;
-    z-index: -100; }
+.seventh-panel .list-style-plus li {
+  color: #888888; }
+  .seventh-panel .list-style-plus li div h5 {
+    letter-spacing: 1px; }
+  .seventh-panel .list-style-plus li:before {
+    text-indent: -30px; }
 
-.eighth-panel .row-card-bonus .card-body .gift {
-  width: 30px;
-  height: 20px;
-  display: inline-table; }
-  .eighth-panel .row-card-bonus .card-body .gift.emerald-crown {
-    background: url("../../images/crown-1.png") no-repeat;
-    background-size: 100%; }
-  .eighth-panel .row-card-bonus .card-body .gift.diamond-crown {
-    background: url("../../images/crown-2.png") no-repeat;
-    background-size: 100%; }
-  .eighth-panel .row-card-bonus .card-body .gift.red-diamond-crown {
-    background: url("../../images/crown-3.png") no-repeat;
-    background-size: 100%; }
-  .eighth-panel .row-card-bonus .card-body .gift.blue-diamond-crown {
-    background: url("../../images/crown-4.png") no-repeat;
-    background-size: 100%; }
-  .eighth-panel .row-card-bonus .card-body .gift.white-diamond-crown {
-    background: url("../../images/crown-5.png") no-repeat;
-    background-size: 78%; }
-  .eighth-panel .row-card-bonus .card-body .gift.black-diamond-crown {
-    background: url("../../images/crown-6.png") no-repeat;
-    background-size: 80%; }
-
-.eighth-panel .row-card-bonus .card-body .img-gift {
-  width: 150px;
-  height: 150px; }
-
-.eighth-panel .row-card-bonus .card-body > div:first-child {
-  font-size: 12px; }
+.eighth-panel .row-card-bonus .card {
+  margin-bottom: 15px; }
+  .eighth-panel .row-card-bonus .card .card-body .gift {
+    width: 30px;
+    height: 20px;
+    display: inline-table; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.emerald-crown {
+      background: url("../images/crown-1.png") no-repeat;
+      background-size: 100%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.diamond-crown {
+      background: url("../images/crown-2.png") no-repeat;
+      background-size: 100%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.red-diamond-crown {
+      background: url("../images/crown-3.png") no-repeat;
+      background-size: 100%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.blue-diamond-crown {
+      background: url("../images/crown-4.png") no-repeat;
+      background-size: 100%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.white-diamond-crown {
+      background: url("../images/crown-5.png") no-repeat;
+      background-size: 78%; }
+    .eighth-panel .row-card-bonus .card .card-body .gift.black-diamond-crown {
+      background: url("../images/crown-6.png") no-repeat;
+      background-size: 80%; }
+  .eighth-panel .row-card-bonus .card .card-body .img-gift {
+    width: 120%; }
+  .eighth-panel .row-card-bonus .card .card-body > div:first-child {
+    font-size: 12px; }
 
 .ninth-panel .card-body {
-  min-height: 450px;
   color: white; }
   .ninth-panel .card-body .video {
     font-size: 10px; }
@@ -269,52 +224,379 @@
     color: white; }
 
 .ninth-panel .news-1 {
-  background: url("../../images/news-1.png") no-repeat; }
+  background: url("../images/news-1.png") no-repeat; }
 
 .ninth-panel .news-2 {
-  background: url("../../images/news-2.png") no-repeat; }
+  background: url("../images/news-2.png") no-repeat; }
 
 * {
   color: #000;
-  font-size: 1em;
   font-family: 'Montserrat', sans-serif; }
 
-.header-panel {
-  height: 1000px; }
-  .header-panel > .row {
-    height: inherit;
+.second-panel > .row {
+  padding-left: 20px; }
+  .second-panel > .row p,
+  .second-panel > .row strong {
+    font-size: 12px; }
+
+.second-panel .font-weight-bold span {
+  font-size: inherit; }
+
+.second-panel .text-color-light-gray,
+.second-panel .card-text {
+  font-size: 10px;
+  width: 80%; }
+
+.second-panel .card-toggle .card-body {
+  min-height: 140px; }
+
+.second-panel .toggle-element {
+  font-size: 10px; }
+
+.third-panel .left-side-box .text-1 {
+  font-size: 9em; }
+
+.third-panel .left-side-box .text-3 {
+  font-size: 5em;
+  margin-top: 13px; }
+
+.third-panel .left-side-box p {
+  font-size: 1.5em; }
+
+.third-panel .left-side-box .box-3-image {
+  width: 100%;
+  margin-bottom: 20px; }
+
+.third-panel .right-side-box p,
+.third-panel .right-side-box strong {
+  font-size: 1.4em; }
+
+.fourth-panel .text-4 span {
+  font-size: 1.4em; }
+
+.fourth-panel .carousel-control-next,
+.fourth-panel .carousel-control-prev {
+  top: 40%;
+  width: 50px;
+  height: 50px;
+  border-radius: 2px !important; }
+
+.fourth-panel .carousel-control-prev {
+  left: 1%; }
+
+.fourth-panel .carousel-control-next {
+  right: 1%; }
+
+.fourth-panel .carousel {
+  padding-left: 5px;
+  padding-right: 5px; }
+  .fourth-panel .carousel .carousel-item .text-name {
+    font-size: 2em; }
+  .fourth-panel .carousel .carousel-item .position {
+    font-size: 1.1em; }
+  .fourth-panel .carousel .carousel-item .description {
+    font-size: 1.2em; }
+  .fourth-panel .carousel .carousel-item .box-image {
     position: relative; }
-    .header-panel > .row .left-side-box {
-      height: inherit;
-      position: relative;
-      background: url("../../images/box-1-bg.png") no-repeat; }
-      .header-panel > .row .left-side-box .row {
-        padding-left: 12%;
-        margin-top: 16%; }
-    .header-panel > .row .right-side-box {
-      background: linear-gradient(to bottom, #975FE0, #4C3F81); }
-      .header-panel > .row .right-side-box .row {
-        position: absolute;
-        bottom: 5%;
-        right: 0;
-        padding: 26px; }
-        .header-panel > .row .right-side-box .row .king-size {
-          font-weight: bold;
-          font-size: 8rem;
-          text-align: right; }
-          .header-panel > .row .right-side-box .row .king-size .who {
-            font-size: 12rem; }
-        .header-panel > .row .right-side-box .row .btn-group {
-          margin-left: 32%; }
+    .fourth-panel .carousel .carousel-item .box-image .border-image {
+      position: absolute;
+      top: 10px;
+      left: -10px;
+      width: 130px;
+      height: 190px;
+      border: 1px solid rgba(242, 0, 108, 0.4);
+      z-index: -1; }
+    .fourth-panel .carousel .carousel-item .box-image .carusel-image {
+      width: 130px; }
 
-.footer-panel .media-box .col-6 .views {
+.fifth-panel .row {
+  padding-left: 15px; }
+
+.fifth-panel .text-4 {
+  font-size: 6em; }
+  .fifth-panel .text-4 span {
+    font-size: inherit; }
+
+.fifth-panel .mark-title {
+  display: block; }
+  .fifth-panel .mark-title span,
+  .fifth-panel .mark-title h4 {
+    font-size: 1.4rem; }
+
+.fifth-panel .presentation-box {
+  height: 300px;
+  margin-bottom: 20px; }
+  .fifth-panel .presentation-box .left-side-box {
+    position: relative; }
+    .fifth-panel .presentation-box .left-side-box .box-5-image {
+      width: 100%; }
+  .fifth-panel .presentation-box p,
+  .fifth-panel .presentation-box strong {
+    font-size: 1.3em; }
+  .fifth-panel .presentation-box .btn-gradient-border {
+    background: transparent; }
+
+.fifth-panel .row-list-item-problem {
+  position: relative; }
+  .fifth-panel .row-list-item-problem .colored-rounds {
+    position: absolute;
+    top: 8px;
+    left: 0px;
+    width: 7px;
+    height: 7px;
+    border-radius: 10px;
+    background: #F2006C;
+    display: inline-block; }
+    .fifth-panel .row-list-item-problem .colored-rounds + p {
+      font-size: 1rem; }
+
+.fifth-panel .font-weight-bold span {
+  font-size: 1.5rem; }
+
+.fifth-panel .list-style-plus {
+  margin-bottom: 30px; }
+  .fifth-panel .list-style-plus > li {
+    font-size: 1rem; }
+
+.fifth-panel .right-side-box {
+  position: relative; }
+  .fifth-panel .right-side-box .font-weight-bold {
+    font-size: 1.1rem; }
+  .fifth-panel .right-side-box .box-5-image {
+    width: 100%; }
+  .fifth-panel .right-side-box .step-ico {
+    display: inline-block;
+    position: relative; }
+    .fifth-panel .right-side-box .step-ico.active .line-ico {
+      border-top-color: #F2006C; }
+    .fifth-panel .right-side-box .step-ico.col-3 p.text-color-light-gray {
+      font-size: 0.66rem; }
+    .fifth-panel .right-side-box .step-ico .title-step-ico {
+      font-size: 1rem; }
+  .fifth-panel .right-side-box .line-ico {
+    position: absolute;
+    width: 20px;
+    right: 10px;
+    top: 0; }
+  .fifth-panel .right-side-box .text,
+  .fifth-panel .right-side-box strong {
+    font-size: 1.1rem; }
+
+.sixth-panel .row {
+  padding-left: 15px; }
+
+.sixth-panel .right-side-box {
+  padding-left: 0;
+  margin-bottom: 20px; }
+  .sixth-panel .right-side-box .image-box {
+    width: 100%; }
+
+.sixth-panel .list-style-plus li div {
+  margin-top: -14px; }
+  .sixth-panel .list-style-plus li div p, .sixth-panel .list-style-plus li div span {
+    font-size: 1rem; }
+  .sixth-panel .list-style-plus li div h5 {
+    letter-spacing: 1px; }
+
+.sixth-panel .list-style-plus li:before {
+  text-indent: -30px; }
+
+.sixth-panel .form-contacts {
+  padding-right: 15px; }
+  .sixth-panel .form-contacts .btn-gradient-border {
+    background: transparent; }
+  .sixth-panel .form-contacts .form-text, .sixth-panel .form-contacts .text-color-light-gray {
+    font-size: 1rem; }
+
+.seventh-panel .row {
+  padding-right: 15px; }
+  .seventh-panel .row.d-flex .text-4 {
+    font-size: 3.5em; }
+    .seventh-panel .row.d-flex .text-4 span {
+      font-size: 2.5rem; }
+  .seventh-panel .row.d-flex p {
+    font-size: 1.5em; }
+
+.seventh-panel .box-image img {
+  width: 100%; }
+
+.seventh-panel .btn-registration {
+  margin-top: -15px; }
+
+.seventh-panel .list-style-plus > li {
+  margin-bottom: 10px; }
+  .seventh-panel .list-style-plus > li div {
+    margin-top: -13px; }
+    .seventh-panel .list-style-plus > li div h5 {
+      letter-spacing: 1px; }
+  .seventh-panel .list-style-plus > li:before {
+    text-indent: -30px; }
+
+.seventh-panel .list-with-dashed li {
+  list-style-type: none;
+  list-style-position: inside;
+  margin-bottom: 5px; }
+  .seventh-panel .list-with-dashed li:before {
+    content: '\2014'; }
+
+.eighth-panel .row {
+  padding-right: 15px;
+  padding-left: 15px; }
+  .eighth-panel .row .text-4 {
+    font-size: 2.5rem; }
+  .eighth-panel .row .text-center {
+    font-size: 1.3em; }
+  .eighth-panel .row .text-color-purple {
+    position: relative;
+    font-size: 2.5rem; }
+    .eighth-panel .row .text-color-purple .text-border-purple {
+      font-size: 2.5rem;
+      position: absolute;
+      top: 3px;
+      right: -4px;
+      z-index: -100; }
+
+.eighth-panel .row-card-bonus .card-body .gift {
+  width: 30px;
+  height: 20px;
+  display: inline-table; }
+  .eighth-panel .row-card-bonus .card-body .gift.emerald-crown {
+    background: url("../images/crown-1.png") no-repeat;
+    background-size: 100%; }
+  .eighth-panel .row-card-bonus .card-body .gift.diamond-crown {
+    background: url("../images/crown-2.png") no-repeat;
+    background-size: 100%; }
+  .eighth-panel .row-card-bonus .card-body .gift.red-diamond-crown {
+    background: url("../images/crown-3.png") no-repeat;
+    background-size: 100%; }
+  .eighth-panel .row-card-bonus .card-body .gift.blue-diamond-crown {
+    background: url("../images/crown-4.png") no-repeat;
+    background-size: 100%; }
+  .eighth-panel .row-card-bonus .card-body .gift.white-diamond-crown {
+    background: url("../images/crown-5.png") no-repeat;
+    background-size: 78%; }
+  .eighth-panel .row-card-bonus .card-body .gift.black-diamond-crown {
+    background: url("../images/crown-6.png") no-repeat;
+    background-size: 80%; }
+
+.eighth-panel .row-card-bonus .card-body > div:first-child {
+  font-size: 12px; }
+
+.ninth-panel .row {
+  padding-left: 15px; }
+  .ninth-panel .row .text-color-light-gray {
+    font-size: 1.4em; }
+
+.ninth-panel .card {
+  margin-bottom: 15px; }
+  .ninth-panel .card .card-body {
+    width: 100%;
+    height: 250px;
+    color: white; }
+    .ninth-panel .card .card-body .card-text {
+      font-size: 1.7rem; }
+      .ninth-panel .card .card-body .card-text span {
+        font-size: 1.7rem; }
+
+.ninth-panel .btn-gradient-border {
+  background: transparent; }
+
+.ninth-panel .news-1 {
+  background: url("../images/news-1.png") no-repeat;
+  background-size: 100%; }
+
+.ninth-panel .news-2 {
+  background: url("../images/news-2.png") no-repeat;
+  background-size: 100%; }
+
+* {
+  font-size: 0.7rem; }
+
+.header-panel {
+  max-height: 30%;
+  height: 400px; }
+  .header-panel > .row .left-side-box {
+    background: url("../../images/box-1-bg.png") no-repeat;
+    background-size: 164%; }
+    .header-panel > .row .left-side-box .row {
+      padding-left: 12%;
+      margin-top: 13%; }
+      .header-panel > .row .left-side-box .row .title-big-1 {
+        font-size: 1.4rem;
+        margin-top: 20px;
+        margin-bottom: 15px; }
+        .header-panel > .row .left-side-box .row .title-big-1 span {
+          font-size: inherit; }
+      .header-panel > .row .left-side-box .row .text-color-light-gray {
+        flex: 0 0 58.333333%;
+        max-width: 58.333333%;
+        margin-bottom: 20%; }
+      .header-panel > .row .left-side-box .row .btn-width {
+        flex: 0 0 50.333333%;
+        max-width: 50.333333%; }
+      .header-panel > .row .left-side-box .row .btn-group {
+        margin-top: 12%; }
+        .header-panel > .row .left-side-box .row .btn-group .btn-lang {
+          background: transparent; }
+  .header-panel > .row .right-side-box .row {
+    bottom: 5%;
+    right: 0;
+    padding: 26px; }
+    .header-panel > .row .right-side-box .row .king-size {
+      font-size: 2.5rem;
+      line-height: 4.5rem; }
+      .header-panel > .row .right-side-box .row .king-size .who {
+        font-size: 5rem; }
+    .header-panel > .row .right-side-box .row .btn-group {
+      margin-left: 0;
+      display: grid; }
+  .header-panel .lion-header {
+    width: 110%;
+    max-width: 150px;
+    position: absolute;
+    top: 30%;
+    right: -30%;
+    z-index: 10; }
+
+.footer-panel .row {
+  padding-left: 15px; }
+
+.footer-panel .footer-contacts {
   font-size: 0.8rem; }
+  .footer-panel .footer-contacts span {
+    font-size: 0.8rem; }
 
-.footer-panel .media-box .col-6 .media-link {
-  font-size: 0.9rem; }
+.footer-panel .media-box .text-color-light-gray {
+  margin-bottom: 0.5rem; }
+
+.footer-panel .media-box .col-6 {
+  margin-right: 0.9rem; }
+  .footer-panel .media-box .col-6 .views {
+    font-size: 0.6rem; }
+  .footer-panel .media-box .col-6 .media-link {
+    font-size: 0.7rem;
+    margin-bottom: 0; }
 
 .footer-panel .media-box .icon {
-  font-size: 1.4rem; }
+  font-size: 1.1rem; }
+
+.logo {
+  width: 70px;
+  height: 50px; }
+
+.header-panel > .row {
+  height: inherit;
+  position: relative; }
+  .header-panel > .row .left-side-box {
+    height: inherit;
+    position: relative; }
+  .header-panel > .row .right-side-box {
+    background: linear-gradient(to bottom, #975FE0, #4C3F81); }
+    .header-panel > .row .right-side-box .row {
+      position: absolute; }
+      .header-panel > .row .right-side-box .row .king-size {
+        font-weight: bold;
+        text-align: right; }
 
 .footer-panel .media-box .icon-social-instagram {
   background: linear-gradient(to bottom right, #5A37B0, #e90370);
@@ -322,12 +604,8 @@
   -webkit-text-fill-color: transparent;
   color: #0B2349; }
 
-.logo {
-  width: 100px;
-  height: 50px; }
-  .logo img {
-    width: 177px;
-    height: 177px; }
+.logo img {
+  width: 100%; }
 
 .text-color-purple {
   color: #523AB4; }
@@ -368,7 +646,7 @@
 .btn-gradient {
   color: white;
   font-weight: bold;
-  border-radius: 6px;
+  border-radius: 4px;
   background-repeat-x: no-repeat;
   background-image: linear-gradient(to right, #5A37B0 25%, #e90370); }
 
@@ -383,14 +661,6 @@
   font-weight: bold; }
   .btn-lang.active {
     color: #523AB4; }
-
-.lion-header {
-  width: 52%;
-  height: 66%;
-  position: absolute;
-  top: 10%;
-  right: -23%;
-  z-index: 10; }
 
 .opst-4 {
   opacity: 0.4; }
