--- a/src/css/six_box.css
+++ b/src/css/six_box.css
@@ -1,9 +1,5 @@
-.sixth-panel .right-side-box {
-  position: relative; }
-  .sixth-panel .right-side-box .image-box {
-    position: absolute;
-    left: -51%;
-    width: 150%; }
+.sixth-panel .list-style-plus li div h5 {
+  letter-spacing: 1px; }
 
 .sixth-panel .list-style-plus li:before {
-  text-indent: -20px; }
+  text-indent: -30px; }
