--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'icon';
-  src:  url('../../fonts/icons/icon.eot?9re3qw');
-  src:  url('../../fonts/icons/icon.eot?9re3qw#iefix') format('embedded-opentype'),
-    url('../../fonts/icons/icon.ttf?9re3qw') format('truetype'),
-    url('../../fonts/icons/icon.woff?9re3qw') format('woff'),
-    url('../../fonts/icons/icon.svg?9re3qw#icon') format('svg');
+  src:  url('../fonts/icons/icon.eot?9re3qw');
+  src:  url('../fonts/icons/icon.eot?9re3qw#iefix') format('embedded-opentype'),
+    url('../fonts/icons/icon.ttf?9re3qw') format('truetype'),
+    url('../fonts/icons/icon.woff?9re3qw') format('woff'),
+    url('../fonts/icons/icon.svg?9re3qw#icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -82,7 +82,7 @@
 }
 
 .list-style-plus {
-  li {
+  >li {
     list-style-type: none;
 
     &:before {
