--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,14 +18,16 @@
 }
 
 //@media (max-width: $mobile) {
-    @import 'mobile/main_mobile';
+//    @import 'mobile/main_mobile';
 //}
 //@media (max-width: $tablet) {
-//    @import 'tablets/main-tablet';
+    @import 'tablets/main-tablet';
 //}
 //@media (max-width: $desktop) {
 //    @import 'desctop/main-desctop';
 //}
+
+
 
 .header-panel {
     &>.row {
