--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,10 +21,10 @@
 //    @import 'mobile/main_mobile';
 //}
 //@media (max-width: $tablet) {
-    @import 'tablets/main-tablet';
+//    @import 'tablets/main-tablet';
 //}
 //@media (max-width: $desktop) {
-//    @import 'desctop/main-desctop';
+    @import 'desctop/main-desctop';
 //}
 
 
