--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,10 +20,16 @@
 @media (max-width: $mobile) {
    @import 'mobile/main_mobile';
 }
+
 @media (max-width: $tablet) {
     @import 'tablets/main-tablet';
 }
+
 @media (max-width: $desktop) {
+    @import 'desctop/main-desctop';
+}
+
+@media (min-width: $desktop) {
     @import 'desctop/main-desctop';
 }
 
