--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -120,7 +120,11 @@
 
 .btn-transparent {
     background: transparent;
-    color: white;
+    color: white !important;
+
+    &:hover {
+        color: $crimson !important;
+    }
 }
 
 .btn-gradient {
