--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,7 +12,8 @@ $color-gradient-header-srart-right: #975EE0;
 $color-gradient-header-finish-left: #4C4080;
 $color-gradient-header-finish-right: #4C3F81;
 $mobile: 500px;
-$tablet: 800px;
-$desktop: 1200px;
-$desktop: 1200px;
+$pre-tablet: 749.98px;
+$tablet: 750px;
+$pre-desktop: 1000.98px;
+$desktop: 1001px;
 
