--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,9 +11,11 @@ $color-gradient-header-srart-left: #975FE0;
 $color-gradient-header-srart-right: #975EE0;
 $color-gradient-header-finish-left: #4C4080;
 $color-gradient-header-finish-right: #4C3F81;
+$small-mobile: 100px;
+$pre-mobile: 300px;
 $mobile: 500px;
 $pre-tablet: 749.98px;
 $tablet: 750px;
-$pre-desktop: 1000.98px;
-$desktop: 1001px;
+$pre-desktop: 900.98px;
+$desktop: 901px;
 
