--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,11 +17,11 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-@media (min-width: $small-mobile) and (max-width: $pre-mobile) {
-   @import 'mobile/main_mobile';
-}
+//@media (min-width: $small-mobile) and (max-width: $pre-mobile) {
+//   @import 'mobile/main_mobile';
+//}
 
-@media (min-width: $mobile) and (max-width: $pre-tablet) {
+@media (min-width: $small-mobile) and (max-width: $pre-tablet) {
    @import 'mobile/main_mobile';
 }
 
