--- a/src/scss/extra-small-mobile/second_box.scss
+++ b/src/scss/extra-small-mobile/second_box.scss
@@ -1,6 +1,11 @@
 @import '../variables';
 
 .second-panel {
+  .left-transform,
+  .right-transform {
+    display: none;
+  }
+
   >.row {
     padding-left: 20px;
 
