--- a/src/css/seventh_box.css
+++ b/src/css/seventh_box.css
@@ -2,7 +2,7 @@
   opacity: 0.6; }
 
 .seventh-panel .list-style-plus li {
-  color: #888888; }
+  font-weight: lighter; }
   .seventh-panel .list-style-plus li div h5 {
     letter-spacing: 1px; }
   .seventh-panel .list-style-plus li:before {
