--- a/src/scss/extra-small-mobile/main_mobile.scss
+++ b/src/scss/extra-small-mobile/main_mobile.scss
@@ -21,6 +21,7 @@
         .left-side-box {
             background: url("../../images/box-1-bg.png")no-repeat;
             background-size: 164%;
+
             .row {
                 padding-left: 12%;
                 margin-top: 13%;
@@ -36,18 +37,12 @@
                 }
 
                 .text-color-light-gray {
-                    flex: 0 0 58.333333%;
-                    max-width: 58.333333%;
-                    margin-bottom: 20%;
-                }
-
-                .btn-width {
-                    flex: 0 0 50.333333%;
-                    max-width: 50.333333%;
+                    margin-bottom: 30px;
+                    font-size: 0.9rem;
                 }
 
                 .btn-group {
-                    margin-top: 12%;
+                    margin-top: 0;
 
                     .btn-lang {
                         background: transparent;
@@ -63,18 +58,36 @@
                 padding: 26px;
 
 
-                .king-size {
-                    font-size: 2.5rem;
-                    line-height: 4.5rem;
+                @media (max-width: 374.98px) {
+                    .king-size {
+                        font-size: 2.8rem;
+                        line-height: 5rem;
 
-                    .who {
-                        font-size: 5rem;
+                        .who {
+                            font-size: 5rem;
+                        }
+                    }
+
+                    .btn-group {
+                        margin-left: 20%;
+                        display: grid;
                     }
                 }
 
-                .btn-group {
-                    margin-left: 0;
-                    display: grid;
+                @media (min-width: 375px) {
+                    .king-size {
+                        font-size: 3.3rem;
+                        line-height: 5.5rem;
+
+                        .who {
+                            font-size: 7rem;
+                        }
+                    }
+
+                    .btn-group {
+                        margin-left: 0;
+                        display: grid;
+                    }
                 }
             }
         }
@@ -82,14 +95,21 @@
 
     .lion-header {
         width: 100%;
-        max-width: 130px;
         position: absolute;
-        top: 20%;
-        right: -27%;
         z-index: 10;
 
-    }
+        @media (max-width: 374.98px) {
+            max-width: 120px;
+            top: 130px;
+            right: -40px;
+        }
 
+        @media (min-width: 375px) {
+            max-width: 140px;
+            top: 90px;
+            right: -60px;
+        }
+    }
 }
 
 .footer-panel {
