--- a/src/scss/extra-small-mobile/ninth_box.scss
+++ b/src/scss/extra-small-mobile/ninth_box.scss
@@ -3,16 +3,28 @@
     padding-left: 15px;
 
     .text-color-light-gray {
-      font-size: 1.4em;
+      font-size: 1.6em;
+
+      span {
+        font-size: 1em;
+      }
     }
   }
+
   .card {
     margin-bottom: 15px;
 
     .card-body {
       width: 100%;
-      height: 250px;
       color: white;
+
+      @media (max-width: 374.98px) {
+        height: 200px;
+      }
+
+      @media (min-width: 375px) {
+        height: 250px;
+      }
 
       .card-text {
         font-size: 1.7rem;
