--- a/src/scss/extra-small-mobile/main_mobile.scss
+++ b/src/scss/extra-small-mobile/main_mobile.scss
@@ -60,8 +60,8 @@
 
                 @media (max-width: 374.98px) {
                     .king-size {
-                        font-size: 2.8rem;
-                        line-height: 5rem;
+                        font-size: 2.4rem;
+                        line-height: 3.9rem;
 
                         .who {
                             font-size: 5rem;
@@ -69,15 +69,47 @@
                     }
 
                     .btn-group {
-                        margin-left: 20%;
+                        margin-left: 10%;
                         display: grid;
                     }
                 }
 
-                @media (min-width: 375px) {
+                @media (min-width: 375px) and (max-width: 411.98px) {
                     .king-size {
-                        font-size: 3.3rem;
-                        line-height: 5.5rem;
+                        font-size: 2.5rem;
+                        line-height: 4.2rem;
+
+                        .who {
+                            font-size: 5rem;
+                        }
+                    }
+
+                    .btn-group {
+                        margin-left: 15%;
+                        display: grid;
+                    }
+                }
+
+                @media (min-width: 412px) and (max-width: 475.98px) {
+                    .king-size {
+                        font-size: 2.9rem;
+                        line-height: 4.6rem;
+
+                        .who {
+                            font-size: 6rem;
+                        }
+                    }
+
+                    .btn-group {
+                        margin-left: 15%;
+                        display: grid;
+                    }
+                }
+
+                @media (min-width: 476px) and (max-width: 535.98px) {
+                    .king-size {
+                        font-size: 3.7rem;
+                        line-height: 5.2rem;
 
                         .who {
                             font-size: 7rem;
@@ -85,8 +117,24 @@
                     }
 
                     .btn-group {
-                        margin-left: 0;
+                        margin-left: 15%;
                         display: grid;
+                    }
+                }
+
+                @media (min-width: 536px) {
+                    .king-size {
+                        font-size: 4.2rem;
+                        line-height: 5.3rem;
+
+                        .who {
+                            font-size: 8rem;
+                        }
+                    }
+
+                    .btn-group {
+                        margin-left: 4%;
+                        justify-content: center!important;
                     }
                 }
             }
