--- a/src/scss/tablets/eighth_box.scss
+++ b/src/scss/tablets/eighth_box.scss
@@ -8,7 +8,7 @@
     }
 
     .text-center {
-      font-size: 1.3em;
+      font-size: 13px;
     }
 
     .text-color-purple {
@@ -27,34 +27,30 @@
 
   .row-card-bonus {
     .card-body {
-      .gift {
-        width: 30px;
-        height: 20px;
-        display: inline-table;
+      .img-gift {
+        width: 108%!important;
+      }
 
-        &.emerald-crown {
-          background: url("../images/crown-1.png") no-repeat;
-          background-size: 100%;
+      .col-md {
+        &:first-child {
+          padding-right: 0!important;
+          padding-bottom: 0!important;
         }
-        &.diamond-crown {
-          background: url("../images/crown-2.png") no-repeat;
-          background-size: 100%;
+
+        &:last-child {
+          padding-left: 0!important;
         }
-        &.red-diamond-crown {
-          background: url("../images/crown-3.png") no-repeat;
-          background-size: 100%;
+      }
+
+      .card-text {
+        font-size: 11px;
+
+        br {
+          line-height: 1px;
         }
-        &.blue-diamond-crown {
-          background: url("../images/crown-4.png") no-repeat;
-          background-size: 100%;
-        }
-        &.white-diamond-crown {
-          background: url("../images/crown-5.png") no-repeat;
-          background-size: 78%;
-        }
-        &.black-diamond-crown {
-          background: url("../images/crown-6.png") no-repeat;
-          background-size: 80%;
+
+        span {
+          font-size: 12px;
         }
       }
 
