--- a/src/scss/big-mobile/fourth_box.scss
+++ b/src/scss/big-mobile/fourth_box.scss
@@ -8,7 +8,7 @@
   }
   .carousel-control-next,
   .carousel-control-prev {
-    top: 40%;
+    top: 200px;
     width: 50px;
     height: 50px;
     border-radius: 2px !important;
