--- a/src/scss/desctop/second_box.scss
+++ b/src/scss/desctop/second_box.scss
@@ -1,6 +1,11 @@
 @import '../variables';
 
 .second-panel {
+  .left-transform,
+  .right-transform {
+    display: none;
+  }
+
   >.row {
     padding-left: 20px;
 
@@ -26,8 +31,8 @@
 
     .card {
       &:first-child{
-        padding-right: 2%;
-        margin-right: 4%;
+        padding-right: 25px;
+        margin-right: 28px;
         margin-left: 0;
       }
 
@@ -44,7 +49,16 @@
     width: 80%;
   }
 
+  .collapse {
+    p,
+    strong {
+      font-size: 1.1rem;
+    }
+  }
+
   .card-toggle {
+    margin-left: -49px;
+
     .card-body {
       min-height: 140px;
     }
