--- a/src/scss/extra-small-mobile/second_box.scss
+++ b/src/scss/extra-small-mobile/second_box.scss
@@ -7,7 +7,7 @@
   }
 
   >.row {
-    padding-left: 20px;
+      padding-left: 20px;
 
     p,
     strong {
@@ -28,6 +28,13 @@
   }
 
   .card-toggle {
+    margin: 0 1px;
+    padding-left: 0px;
+
+    >div {
+      padding: 0;
+    }
+
     .card-body {
       min-height: 140px;
     }
