--- a/src/scss/tablets/fourth_box.scss
+++ b/src/scss/tablets/fourth_box.scss
@@ -10,7 +10,7 @@
   }
   .carousel-control-next,
   .carousel-control-prev {
-    top: 40%;
+    top: 380px;
     width: 50px;
     height: 50px;
     border-radius: 2px !important;
